app/assets/stylesheets/nav_bar.scss
$red-theme: #CE1141;
$yellow-theme: #f4d06f;
$white-theme: #e5e5e5;
$black-theme: rgb(51, 51, 51);
$form-button-text-fam: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;

.nav-bar-container {
  position: fixed;
  top: 0;
  right: 0%;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 46px;
  background-color: $black_theme;
  z-index: 999;
}

.nav-bar-space {
  width: 12.5%;
  height: 100%;
  background-color: $black_theme;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 75%;
}

.nav-bar a:hover, .profile-button > div:hover {
  color: white;
}

.phantom-nav-bar {
  display: block;
  width: 100%;
  height: 46px;
}

.nav-left-links {
  display: flex;
  justify-content: center;
  max-height: 46px;
  height: 100%;
}

.nav-left-link {
  font-size: 13px;
  padding: 0 25px;
  height: 100%;
  line-height: 46px;
  border-right: 1px solid black;
  text-align: center;
  box-sizing: border-box;
}

.nav-right-link {
  font-size: 13px;
  height: 100%;
  line-height: 46px;
  padding: 0 15px;
  text-align: center;
  min-width: fit-content;
}

.link-selected {
  background-color: #111111;
  color: white;
}

.homepage-link {
  line-height: 46px;
  height: 100%;
  font-family: Josefin Sans;
  font-weight: 900;
  font-size: 18px;
  color: $white-theme;
  padding: 0 10px;
  background-color: $red-theme;
  max-height: 46px;
  min-width: 160px;
  text-align: center;
}

.login-button {
  color: white;
  background-color: rgb(51, 51, 51);;
  font-size: 13px;
  font-weight: 100;
  font-family: $form-button-text-fam;
  width: 70px;
  height: 26px;
  border-radius: 3px;
  border: 1px solid #e5e5e5;
  padding: 2px 11px 2px 10px;
}

.signup-button {
  color: white;
  font-family: $form-button-text-fam;
  font-size: 13px;
  font-weight: 100;
  background-color: $yellow-theme;
  width: 110px;
  height: 26px;
  border-radius: 3px;
  border: 1px solid #e5e5e5;
  padding: 2px 4px 2px 4px;
}

.profile-button-container {
  width: 140px;
  height: 46px;
  cursor: pointer;
  max-width: 45%;
  position: relative;
}

.profile-button {
  display: flex;
  align-items: center;
  position: relative;
  width: 140px;
  height: 46px;
  cursor: pointer;
  max-width: 45%;
  padding: 0 10px;
}

.profile-button > img {
  width: 33px;
  height: 33px;
  border-radius: 50%;
}

.profile-button-text {
  display: flex;
  align-items: center;
}

.profile-button-text > div:first-child {
  color: #c9c9c9;
  margin-left: 10px;
  font-size: 13px;
  font-family: $form-button-text-fam;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.profile-button-text > div:nth-child(2) {
  height: 10px;
  padding-left: 5px;
  color: #c9c9c9;
}

.profile-button:hover .profile-button-text > div{
  color: white;
}

// .site-dropdown-button {
//   position: relative;
//   font-size: 30px;
//   font-weight: 600;
//   text-align: center;
//   width: 50px;
//   height: 46px;
//   color: #c9c9c9;
//   cursor: pointer;
//   outline-style: none;
// }

// .site-dropdown-button.dropdown-selected {
//   background-color: black;
// }

.profile-dropdown-div {
  position: absolute;
  top: 100%;
  right: 0%;
  display: flex;
  flex-direction: column;
  background-color: #ffffff;
  width: 100%;
  height: auto;
  border-radius: 0 0 3px 3px;
  // padding: 5px;
  box-sizing: border-box;
  border: 1px solid #ccc;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}

.profile-dropdown-button:hover > div {
  color: white;
  background-color: #b4b4b4;
}

// .profile-dropdown-div > a {
//   text-align: left;
//   color: #333;
//   padding: 8px 10px;
//   font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
// }

.profile-dropdown-div > div {
  display: flex;
  align-items: center;
  padding: 8px 10px;
}

.profile-dropdown-div > div > div:nth-child(2) {
  font-size: 12px;
  text-align: left;
  color: #333;
  font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
  padding-left: 10px;
}

.profile-dropdown-div > div:hover > div:nth-child(2) {
  color: #999;
}

.profile-dropdown-div > div:hover  {
  background-color: #f1f1f1;
}

